apps/normal-ass-note/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: normal-ass-note

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: normal-ass-note
  namespace: normal-ass-note
  labels:
    app.kubernetes.io/name: normal-ass-note
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: normal-ass-note
  template:
    metadata:
      labels:
        app.kubernetes.io/name: normal-ass-note
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: normal-ass-note
          image: quangsumi/normal-ass-note:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

---
apiVersion: v1
kind: Service
metadata:
  name: normal-ass-note
  namespace: normal-ass-note
  labels:
    app.kubernetes.io/name: normal-ass-note
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: normal-ass-note
  ports:
    - name: http
      port: 80
      targetPort: http

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: normal-ass-note-lb
#   namespace: normal-ass-note
#   labels:
#     app.kubernetes.io/name: normal-ass-note
# spec:
#   type: LoadBalancer
#   loadBalancerIP: 192.168.63.221
#   selector:
#     app.kubernetes.io/name: normal-ass-note
#   ports:
#     - name: http
#       port: 80
#       targetPort: http

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: normal-ass-note-tailscale
#   namespace: normal-ass-note
#   # annotations:
#   #   tailscale.com/funnel: "true"
# spec:
#   ingressClassName: tailscale
#   defaultBackend:
#     service:
#       name: normal-ass-note
#       port:
#         number: 80
#   tls:
#     - hosts:
#         - normal-ass-note

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: normal-ass-note
  namespace: normal-ass-note
spec:
  ingressClassName: traefik
  rules:
    - host: note.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: normal-ass-note
                port:
                  number: 80
